--- a/ysdm.fg.app/src/main/res/layout/activity_display.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_display.xml
@@ -121,18 +121,6 @@
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/b_100_100" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="368dp"
-        android:text="5. Multi-Language"
-        android:textColor="#ffffff"
-        android:textSize="32dp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/c_100_100" />
 
 </android.support.constraint.ConstraintLayout>
