--- a/ysdm.fg.app/src/main/res/layout/activity_main.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,30 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mainMenuList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="394dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="goToActivity1"
+        android:text="@string/_1_display"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/_2_handler_thread"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        tools:layout_editor_absoluteX="436dp" />
 
 </android.support.constraint.ConstraintLayout>
