--- a/ysdm.fg.app/src/main/res/layout/activity_main.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="goToActivity2"
         android:text="@string/_2_handler_thread"
         app:layout_constraintTop_toBottomOf="@+id/button1"
         tools:layout_editor_absoluteX="436dp" />
