--- a/ysdm.fg.app/src/main/res/layout/content_thread_handling.xml
+++ b/ysdm.fg.app/src/main/res/layout/content_thread_handling.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="132dp"
         android:text="3. OOM"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
+        android:onClick="onE22Start"
         android:text="Start"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -96,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="232dp"
+        android:onClick="onE23Start"
         android:text="Start"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
@@ -130,4 +132,13 @@
         android:textSize="32dp"
         app:layout_constraintStart_toEndOf="@+id/button_2_4_start"
         app:layout_constraintTop_toTopOf="@+id/button_2_4_start" />
+
+    <ImageView
+        android:id="@+id/imageView_2_2"
+        android:layout_width="276dp"
+        android:layout_height="147dp"
+        android:layout_marginStart="40dp"
+        app:layout_constraintStart_toEndOf="@+id/button_2_2_start"
+        app:layout_constraintTop_toTopOf="@+id/button_2_2_start"
+        app:srcCompat="@drawable/a_100_100" />
 </android.support.constraint.ConstraintLayout>
