--- a/ysdm.fg.app/src/main/res/layout/activity_main.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mainMenuList"
-        android:layout_width="match_parent"
-        android:layout_height="394dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        tools:layout_editor_absoluteX="16dp" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
@@ -30,10 +22,11 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:onClick="goToActivity2"
         android:text="@string/_2_handler_thread"
-        app:layout_constraintTop_toBottomOf="@+id/button1"
-        tools:layout_editor_absoluteX="436dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 
 </android.support.constraint.ConstraintLayout>
