--- a/ysdm.fg.app/src/main/res/layout/activity_main.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="goToActivity4"
+        android:text="4. Broadcast Receiver"
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        tools:layout_editor_absoluteX="116dp" />
+
 </android.support.constraint.ConstraintLayout>
