--- a/ysdm.fg.app/src/main/res/layout/activity_service.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_service.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
+        android:onClick="onE61StartHDCPService"
         android:text="start"
         app:layout_constraintStart_toEndOf="@+id/textView18"
         app:layout_constraintTop_toTopOf="@+id/textView18" />
