--- a/ysdm.fg.app/src/main/res/layout/activity_service.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_service.xml
@@ -54,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="232dp"
+        android:onClick="onE62ClearPopup"
         android:text="clear"
         app:layout_constraintStart_toEndOf="@+id/textView19"
         app:layout_constraintTop_toTopOf="@+id/textView19" />
