--- a/ysdm.fg.app/src/main/res/layout/activity_service.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_service.xml
@@ -64,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:onClick="onE63ClearPopup"
         android:text="clear"
         app:layout_constraintStart_toEndOf="@+id/textView20"
         app:layout_constraintTop_toTopOf="@+id/textView20" />
