--- a/ysdm.fg.app/src/main/res/layout/activity_jni.xml
+++ b/ysdm.fg.app/src/main/res/layout/activity_jni.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="136dp"
+        android:onClick="onE71JavaNative"
         android:text="Print"
         app:layout_constraintStart_toEndOf="@+id/textView23"
         app:layout_constraintTop_toTopOf="@+id/textView23" />
@@ -30,11 +31,10 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="60dp"
         android:text="unknown"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/button19"
+        app:layout_constraintStart_toStartOf="@+id/textView23"
         app:layout_constraintTop_toTopOf="@+id/textView23" />
 
     <TextView
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
+        android:onClick="onE72JavaNativeJava"
         android:text="print"
         app:layout_constraintStart_toEndOf="@+id/textView25"
         app:layout_constraintTop_toTopOf="@+id/textView25" />
@@ -61,9 +62,10 @@
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
         android:text="unknown"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/button20"
+        app:layout_constraintStart_toStartOf="@+id/textView25"
         app:layout_constraintTop_toTopOf="@+id/textView25" />
 </android.support.constraint.ConstraintLayout>
